--- a/licensing-service-test.properties
+++ b/licensing-service-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://database:5432/ostock_test
+spring.datasource.url = jdbc:postgresql://database:5432/ostock_dev
 spring.datasource.username = postgres
 spring.datasource.password = pass
 spring.datasource.driver-class-name=org.postgresql.Driver
