--- a/licensing-service-dev.properties
+++ b/licensing-service-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.url = jdbc:postgresql://database:5432/ostock_dev
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
