--- a/licensing-service-test.properties
+++ b/licensing-service-test.properties
@@ -2,4 +2,4 @@ spring.datasource.url = jdbc:postgresql://database:5432/ostock_dev
 spring.datasource.username = postgres
 spring.datasource.password = pass
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
