--- a/ecom-configs/cart_item-prod.properties
+++ b/ecom-configs/cart_item-prod.properties
@@ -12,4 +12,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
 server.port=8082
-spring.cloud.config.import-check.enabled=false.
+spring.cloud.config.import-check.enabled=false
