--- a/ecom-configs/order.properties
+++ b/ecom-configs/order.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
 server.port=8081
+cart.service.url=http://localhost:8082
