--- a/ecom-configs/catalog.properties
+++ b/ecom-configs/catalog.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
 server.port=8080
+catalog.service.url=http://catalog:8080
