--- a/ecom-configs/order.properties
+++ b/ecom-configs/order.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
 server.port=8081
-cart.service.url=http://cart-item:8082
+cart.service.url=http://cart_item:8082
