--- a/licensing-service.properties
+++ b/licensing-service.properties
@@ -1,3 +1,6 @@
+example.property= I AM THE DEFAULT
+
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
@@ -7,3 +10,16 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.database.driverClassName= org.postgresql.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
+
+
+spring.cloud.loadbalancer.ribbon.enabled = false
+
+
+        
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=true
+
+eureka.instance.preferIpAddress = true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone = http://eurekaserver:8070/eureka/
