--- a/licensing-service.properties
+++ b/licensing-service.properties
@@ -1,5 +1,5 @@
 example.property= I AM THE DEFAULT
-
+spring.datasource.url = jdbc:postgresql://database:5432/ostock_dev
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=POSTGRESQL
