--- a/eureka-server-instance-3.yml
+++ b/eureka-server-instance-3.yml
@@ -8,7 +8,7 @@ server:
   port: 8073
 eureka:
   instance:
-    hostname: eureka-instance-3
+    hostname: eureka-server-instance-3
   client:
     registerWithEureka: false
     fetchRegistry: false
