--- a/licensing-service.properties
+++ b/licensing-service.properties
@@ -22,4 +22,4 @@ management.endpoints.enabled-by-default=true
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://eurekaserver:8070/eureka/
+eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka, http://eureka-server-instance-3:8073/eureka
