--- a/eureka-server-instance-3.yml
+++ b/eureka-server-instance-3.yml
@@ -13,7 +13,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eureka-server:8070/eureka, http://eureka-instance-2:8072/eureka
+      defaultZone: http://eureka-server:8070/eureka, http://eureka-server-instance-2:8072/eureka
   server:
     waitTimeInMsWhenSyncEmpty: 5
 
