--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -10,8 +10,8 @@ eureka:
   instance:
     hostname: eureka-server
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://eureka-server-instance-2:8072/eureka, http://eureka-server-instance-3:8073/eureka
   server:
