--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,4 +1,5 @@
 spring:
+  profiles: default
   application:
     name: eureka-server
   boot:
@@ -10,8 +11,8 @@ eureka:
   instance:
     hostname: eureka-server
   client:
-    registerWithEureka: true
-    fetchRegistry: true
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
       defaultZone: http://eureka-server-instance-2:8072/eureka, http://eureka-server-instance-3:8073/eureka
   server:
