--- a/eureka-server-instance-3.yml
+++ b/eureka-server-instance-3.yml
@@ -1,5 +1,7 @@
 spring:
-  profiles: instance-3
+  config:
+    active:
+      on-profile: instance-3
   application:
     name: eureka-server-instance-3
   boot:
