--- a/eureka-server-instance-2.yml
+++ b/eureka-server-instance-2.yml
@@ -1,5 +1,7 @@
 spring:
-  profiles: instance-2
+  config:
+    active:
+      on-profile: instance-2
   application:
     name: eureka-server-instance-2
   boot:
