--- a/organization-service.properties
+++ b/organization-service.properties
@@ -14,7 +14,8 @@ management.endpoints.enabled-by-default=true
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka, http://eureka-server-instance-3:8073/eureka
+#eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka, http://eureka-server-instance-3:8073/eureka
+eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
 spring.datasource.url = jdbc:postgresql://database:5432/ostock_dev
 spring.datasource.username=postgres
 spring.datasource.password=postgres
