--- a/licensing-service-dev.properties
+++ b/licensing-service-dev.properties
@@ -27,4 +27,5 @@ eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
 server.port=8082
 spring.cloud.config.import-check.enabled=false
 spring.jpa.defer-datasource-initialization=true
+spring.cloud.loadbalancer.ribbon.enabled = false
 
