--- a/licensing-service-dev.properties
+++ b/licensing-service-dev.properties
@@ -28,4 +28,4 @@ server.port=8082
 spring.cloud.config.import-check.enabled=false
 spring.jpa.defer-datasource-initialization=true
 spring.cloud.loadbalancer.ribbon.enabled = false
-
+organization.service.url = http://organization-service:8081
