--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -15,24 +15,24 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-          lowerCaseServiceId: true
-#        routes:
-#        - id: organization-service
-#          uri: lb://organization-service
-#          predicates:
-#          - Path=/organization/**
-#          filters:
-#          - RewritePath=/organization/(?<path>.*), /$\{path}
-#        - id: licensing-service
-#          uri: lb://licensing-service
-#          predicates:
-#          - Path=/license/**
-#          filters:
-#          - RewritePath=/license/(?<path>.*), /$\{path}
+    # gateway:
+    #   discovery:
+    #     locator:
+    #       enabled: true
+    #       lowerCaseServiceId: true
+       routes:
+       - id: organization-service
+         uri: lb://organization-service
+         predicates:
+         - Path=/organization/**
+         filters:
+         - RewritePath=/organization/(?<path>.*), /$\{path}
+       - id: licensing-service
+         uri: lb://licensing-service
+         predicates:
+         - Path=/license/**
+         filters:
+         - RewritePath=/license/(?<path>.*), /$\{path}
 
 management:
   endpoints:
