--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -1,6 +1,6 @@
 server:
   port: 8072
-
+ 
 eureka:
   instance:
     preferIpAddress: true
@@ -9,33 +9,35 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://eureka-server:8070/eureka/
-
+      
+ 
 spring:
   cloud:
-    loadbalancer:
-      ribbon:
-        enabled: false
+    loadbalancer.ribbon.enabled: false
     gateway:
-      discovery:
-        locator:
-          enabled: true
-          lowerCaseServiceId: true
-       # routes:
-       # - id: organization-service
-       #   uri: lb://organization-service
-       #   predicates:
-       #   - Path=/organization/**
-       #   filters:
-       #   - RewritePath=/organization/(?<path>.*), /$\{path}
-       # - id: licensing-service
-       #   uri: lb://licensing-service
-       #   predicates:
-       #   - Path=/license/**
-       #   filters:
-       #   - RewritePath=/license/(?<path>.*), /$\{path}
+        discovery:
+          locator:
+            enabled: true
+            lowerCaseServiceId: true
+#        routes:
+#        - id: organization-service
+#          uri: lb://organization-service
+#          predicates:
+#          - Path=/organization/**
+#          filters:
+#          - RewritePath=/organization/(?<path>.*), /$\{path}
+#        - id: licensing-service
+#          uri: lb://licensing-service
+#          predicates:
+#          - Path=/license/**
+#          filters:
+#          - RewritePath=/license/(?<path>.*), /$\{path}
 
+
+       
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+        
