--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -32,12 +32,18 @@ spring:
          - Path=/license/**
          filters:
          - RewritePath=/license/(?<path>.*), /$\{path}
-       # - id: test-service
-       #   uri: lb://test-service
-       #   predicates:
-       #   - Path=/test/**
-       #   filters:
-       #   - RewritePath=/test/(?<path>.*), /$\{path}
+        - id: google-service
+          uri: https://www.google.com
+          predicates:
+            - Path=/google/**
+          filters:
+            - RewritePath=/google/(?<path>.*), /$\{path}
+        - id: baylor-service
+          uri: https://www.baylor.edu
+          predicates:
+            - Path=/baylor/**
+          filters:
+            - RewritePath=/baylor/(?<path>.*), /$\{path}
 
        
 management:
