--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -15,23 +15,23 @@ spring:
   cloud:
     loadbalancer.ribbon.enabled: false
     gateway:
-        # discovery:
-        #   locator:
-        #     enabled: true
-        #     lowerCaseServiceId: true
-       routes:
-        - id: organization-service
-          uri: lb://organization-service
-          predicates:
-            - Path=/organization/**
-          filters:
-            - RewritePath=/organization/(?<path>.*), /$\{path}
-        - id: licensing-service
-          uri: lb://licensing-service
-          predicates:
-            - Path=/license/**
-          filters:
-            - RewritePath=/license/(?<path>.*), /$\{path}
+        discovery:
+          locator:
+            enabled: true
+            lowerCaseServiceId: true
+       # routes:
+       #  - id: organization-service
+       #    uri: lb://organization-service
+       #    predicates:
+       #      - Path=/organization/**
+       #    filters:
+       #      - RewritePath=/organization/(?<path>.*), /$\{path}
+       #  - id: licensing-service
+       #    uri: lb://licensing-service
+       #    predicates:
+       #      - Path=/license/**
+       #    filters:
+       #      - RewritePath=/license/(?<path>.*), /$\{path}
 
         # - id: google-service
         #   uri: https://www.google.com
