--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -15,37 +15,37 @@ spring:
   cloud:
     loadbalancer.ribbon.enabled: false
     gateway:
-        discovery:
-          locator:
-            enabled: true
-            lowerCaseServiceId: true
-       # routes:
-       #  - id: organization-service
-       #    uri: lb://organization-service
-       #    predicates:
-       #      - Path=/organization/**
-       #    filters:
-       #      - RewritePath=/organization/(?<path>.*), /$\{path}
-       #  - id: licensing-service
-       #    uri: lb://licensing-service
-       #    predicates:
-       #      - Path=/license/**
-       #    filters:
-       #      - RewritePath=/license/(?<path>.*), /$\{path}
+        # discovery:
+        #   locator:
+        #     enabled: true
+        #     lowerCaseServiceId: true
+       routes:
+        - id: organization-service
+          uri: lb://organization-service
+          predicates:
+            - Path=/organization/**
+          filters:
+            - RewritePath=/organization/(?<path>.*), /$\{path}
+        - id: licensing-service
+          uri: lb://licensing-service
+          predicates:
+            - Path=/license/**
+          filters:
+            - RewritePath=/license/(?<path>.*), /$\{path}
 
-        # - id: google-service
-        #   uri: https://www.google.com
-        #   predicates:
-        #    - Path=/google/**
-        #   filters:
-        #     - RewritePath=/google/(?<path>.*), /$\{path}
+        - id: google-service
+          uri: https://www.google.com
+          predicates:
+           - Path=/google/**
+          filters:
+            - RewritePath=/google/(?<path>.*), /$\{path}
 
-        # -  id: baylor-service
-        #    uri: https://www.baylor.edu
-        #    predicates:
-        #    - Path=/baylor/**
-        #    filters:
-        #     - RewritePath=/baylor/(?<path>.*), /$\{path}
+        -  id: baylor-service
+           uri: https://www.baylor.edu
+           predicates:
+           - Path=/baylor/**
+           filters:
+            - RewritePath=/baylor/(?<path>.*), /$\{path}
 
        
 management:
