--- a/ecom-configs/catalog-dev.properties
+++ b/ecom-configs/catalog-dev.properties
@@ -12,3 +12,7 @@ spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
 server.port=8080
 catalog.service.url=http://catalog:8080
+eureka.instance.preferIpAddress = true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
