--- a/licensing-service-dev.properties
+++ b/licensing-service-dev.properties
@@ -29,3 +29,30 @@ spring.cloud.config.import-check.enabled=false
 spring.jpa.defer-datasource-initialization=true
 spring.cloud.loadbalancer.ribbon.enabled = false
 organization.service.url = http://organization-service:8081
+security.oauth2.resource.userInfoUri= http://authenticationservice:8082/user
+security.oauth2.client.grant-type = client_credentials
+signing.key: "345345fsdfsf5345"
+
+
+
+spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
+spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
+spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
+spring.cloud.stream.kafka.binder.zkNodes= kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+
+spring.zipkin.baseUrl:http://zipkin:9411
+spring.sleuth.sampler.percentage: 1
+
+redis.server = ostock-redis.ymengq.0001.use1.cache.amazonaws.com
+redis.port = 6379
+
+
+keycloak.realm = spmia-realm
+keycloak.auth-server-url = http://keycloak:8080/auth
+keycloak.ssl-required = external
+keycloak.resource = ostock
+keycloak.credentials.secret = 5988f899-a5bf-4f76-b15f-f1cd0d2c81ba
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only = true
