--- a/licensing-service.properties
+++ b/licensing-service.properties
@@ -24,3 +24,30 @@ eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
 #eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka, http://eureka-server-instance-3:8073/eureka
 eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
+security.oauth2.resource.userInfoUri= http://authenticationservice:8080/user
+security.oauth2.client.grant-type = client_credentials
+signing.key: "345345fsdfsf5345"
+
+
+
+spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
+spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
+spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
+spring.cloud.stream.kafka.binder.zkNodes= kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+
+spring.zipkin.baseUrl:http://zipkin:9411
+spring.sleuth.sampler.percentage: 1
+
+redis.server = ostock-redis.ymengq.0001.use1.cache.amazonaws.com
+redis.port = 6379
+
+
+keycloak.realm = spmia-realm
+keycloak.auth-server-url = http://keycloak:8080/auth
+keycloak.ssl-required = external
+keycloak.resource = ostock
+keycloak.credentials.secret = 5988f899-a5bf-4f76-b15f-f1cd0d2c81ba
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only = true
