--- a/organization-service-dev.properties
+++ b/organization-service-dev.properties
@@ -24,3 +24,24 @@ eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
 #spring.datasource.platform=postgres
 spring.cloud.config.import-check.enabled=false
 spring.jpa.defer-datasource-initialization=true
+
+security.oauth2.resource.userInfoUri= http://authenticationservice:8080/user
+signing.key: "345345fsdfsf5345"
+
+
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
+spring.cloud.stream.kafka.binder.zkNodes=kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+spring.zipkin.baseUrl:http://zipkin:9411
+spring.sleuth.sampler.percentage: 1
+
+
+keycloak.realm = spmia-realm
+keycloak.auth-server-url = http://keycloak:8080/auth
+keycloak.ssl-required = external
+keycloak.resource = ostock
+keycloak.credentials.secret = 5988f899-a5bf-4f76-b15f-f1cd0d2c81ba
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only = true
