--- a/organization-service-dev.properties
+++ b/organization-service-dev.properties
@@ -41,7 +41,7 @@ spring.sleuth.sampler.percentage: 1
 keycloak.realm = spmia-realm
 keycloak.auth-server-url = http://keycloak:8080/auth
 keycloak.ssl-required = external
-keycloak.resource = ostock
-keycloak.credentials.secret = jSckZBEJWRopX4YodzmS0jtAZtt7V7Xv
+keycloak.resource = ds-ostock
+keycloak.credentials.secret = F6vCEbZVqnqASY9q3SqYLImlzKuDDIGo
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only = true
