--- a/ecom-configs/eureka-server.properties
+++ b/ecom-configs/eureka-server.properties
@@ -1,7 +1,7 @@
 spring.application.name=eureka-server
 server.port=8070
 
-spring.boot.admin.client.url=http://localhost:8070
+#spring.boot.admin.client.url=http://localhost:8070
 
 eureka.instance.hostname=eureka-server
 eureka.client.registerWithEureka=false
