--- a/ecom-configs/eureka-server-instance-2.properties
+++ b/ecom-configs/eureka-server-instance-2.properties
@@ -1,7 +1,7 @@
 spring.application.name=eureka-server-instance-2
 server.port=8072
 
-spring.boot.admin.client.url=http://localhost:8072
+#spring.boot.admin.client.url=http://localhost:8072
 
 eureka.instance.hostname=eureka-server-instance-2
 eureka.client.registerWithEureka=false
