--- a/ecom-configs/eureka-server.properties
+++ b/ecom-configs/eureka-server.properties
@@ -6,7 +6,7 @@ server.port=8070
 eureka.instance.hostname=eureka-server
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://eureka-server-instance-2:8072/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-server-instance-2:8072/eureka/
 #eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 eureka.server.waitTimeInMsWhenSyncEmpty=5
 
