--- a/ecom-configs/eureka-server-instance-2.properties
+++ b/ecom-configs/eureka-server-instance-2.properties
@@ -6,7 +6,7 @@ server.port=8072
 eureka.instance.hostname=eureka-server-instance-2
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8070/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8070/eureka
 #eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 eureka.server.waitTimeInMsWhenSyncEmpty=5
 
