--- a/ecom-configs/cart-item-dev.properties
+++ b/ecom-configs/cart-item-dev.properties
@@ -17,3 +17,10 @@ eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
 eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
+keycloak.realm = ecommerce-realm
+keycloak.auth-server-url = http://keycloak:8080/auth
+keycloak.ssl-required = external
+keycloak.resource = ecommerce
+keycloak.credentials.secret = hr7uR5bLgy5zp8D2y6brRgeMkPwi9oON
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only = true
