--- a/ecom-configs/order.properties
+++ b/ecom-configs/order.properties
@@ -16,3 +16,10 @@ eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
 eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
+keycloak.realm = ecommerce-realm
+keycloak.auth-server-url = http://keycloak:8080/auth
+keycloak.ssl-required = external
+keycloak.resource = ecommerce
+keycloak.credentials.secret = WL9dmLQcjvwcbXv3Qrq0fA8GDUVZ01kt
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only = true
