--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -1,4 +1,4 @@
-catalog.service.url=http://gateway:8075/catalog
+catalog.service.url=http://catalog:8086
 spring.datasource.url=jdbc:postgresql://database-cart-item:5432/cart-item-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
