--- a/ecom-configs/gateway-server.yml
+++ b/ecom-configs/gateway-server.yml
@@ -11,28 +11,60 @@ eureka:
       defaultZone: http://eureka-server:8070/eureka/
       
  
-spring:
-  cloud:
-    loadbalancer.ribbon.enabled: false
-    gateway:
-        discovery:
-          locator:
-            enabled: true
-            lowerCaseServiceId: true
-#        routes:
-#        - id: organization-service
-#          uri: lb://organization-service
-#          predicates:
-#          - Path=/organization/**
-#          filters:
-#          - RewritePath=/organization/(?<path>.*), /$\{path}
-#        - id: licensing-service
-#          uri: lb://licensing-service
-#          predicates:
-#          - Path=/license/**
-#          filters:
-#          - RewritePath=/license/(?<path>.*), /$\{path}
+# spring:
+#   cloud:
+#     loadbalancer.ribbon.enabled: false
+#     gateway:
+#         discovery:
+#           locator:
+#             enabled: true
+#             lowerCaseServiceId: true
+#         routes:
+#         - id: organization-service
+#           uri: lb://organization-service
+#           predicates:
+#           - Path=/organization/**
+#           filters:
+#           - RewritePath=/organization/(?<path>.*), /$\{path}
+#           - RemoveRequestHeader= Cookie,Set-Cookie
+#         - id: licensing-service
+#           uri: lb://licensing-service
+#           predicates:
+#           - Path=/license/**
+#           filters:
+#           - RewritePath=/license/(?<path>.*), /$\{path}
+#           - RemoveRequestHeader= Cookie,Set-Cookie
 
+  spring:
+    cloud:
+      loadbalancer.ribbon.enabled: false
+      gateway:
+        # discovery:
+        #   locator:
+        #     enabled: true
+        #     lowerCaseServiceId: true
+        routes:
+          - id: cart-item
+            uri: lb://cart-item
+            predicates:
+              - Path=/cart/**
+            filters:
+              - RewritePath=/cart/(?<path>.*), /$\{path}
+              - RemoveRequestHeader= Cookie,Set-Cookie
+          - id: order
+            uri: lb://order
+            predicates:
+              - Path=/license/**
+            filters:
+              - RewritePath=/order/(?<path>.*), /$\{path}
+              - RemoveRequestHeader= Cookie,Set-Cookie
+          - id: catalog
+            uri: lb://catalog
+            predicates:
+              - Path=/catalog/**
+            filters:
+              - RewritePath=/catalog/(?<path>.*), /$\{path}
+              - RemoveRequestHeader= Cookie,Set-Cookie
 
        
 management:
