--- a/licensing-service-dev.properties
+++ b/licensing-service-dev.properties
@@ -56,3 +56,12 @@ keycloak.resource = ds-ostock
 keycloak.credentials.secret = F6vCEbZVqnqASY9q3SqYLImlzKuDDIGo
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only = true
+
+spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
+spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
+spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
+spring.cloud.stream.kafka.binder.zkNodes= kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+redis.server = redis
+redis.port = 6379
