--- a/organization-service-dev.properties
+++ b/organization-service-dev.properties
@@ -45,3 +45,8 @@ keycloak.resource = ds-ostock
 keycloak.credentials.secret = F6vCEbZVqnqASY9q3SqYLImlzKuDDIGo
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only = true
+
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
+spring.cloud.stream.kafka.binder.zkNodes=kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
