--- a/licensing-service-dev.properties
+++ b/licensing-service-dev.properties
@@ -57,9 +57,15 @@ keycloak.credentials.secret = F6vCEbZVqnqASY9q3SqYLImlzKuDDIGo
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only = true
 
-spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
-spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
-spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
+#spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
+#spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
+#spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
+#spring.cloud.stream.kafka.binder.zkNodes= kafka
+#spring.cloud.stream.kafka.binder.brokers=kafka
+
+spring.cloud.stream.function.bindings.inboundOrgChanges.destination= orgChangeTopic
+spring.cloud.stream.function.bindings.inboundOrgChanges.content-type= application/json
+spring.cloud.stream.function.bindings.inboundOrgChanges.group= licensingGroup
 spring.cloud.stream.kafka.binder.zkNodes= kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 
