--- a/organization-service-dev.properties
+++ b/organization-service-dev.properties
@@ -46,7 +46,12 @@ keycloak.credentials.secret = F6vCEbZVqnqASY9q3SqYLImlzKuDDIGo
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only = true
 
-spring.cloud.stream.bindings.output.destination=orgChangeTopic
-spring.cloud.stream.bindings.output.content-type=application/json
+#spring.cloud.stream.bindings.output.destination=orgChangeTopic
+#spring.cloud.stream.bindings.output.content-type=application/json
+#spring.cloud.stream.kafka.binder.zkNodes=kafka
+#spring.cloud.stream.kafka.binder.brokers=kafka
+spring.cloud.stream.function.definition=handleOrganizationChange
+spring.cloud.stream.bindings.handleOrganizationChange-out-0.destination=orgChangeTopic
+spring.cloud.stream.bindings.handleOrganizationChange-out-0.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
