--- a/organization-service.properties
+++ b/organization-service.properties
@@ -27,8 +27,13 @@ security.oauth2.resource.userInfoUri= http://authenticationservice:8080/user
 signing.key: "345345fsdfsf5345"
 
 
-spring.cloud.stream.bindings.output.destination=orgChangeTopic
-spring.cloud.stream.bindings.output.content-type=application/json
+#spring.cloud.stream.bindings.output.destination=orgChangeTopic
+#spring.cloud.stream.bindings.output.content-type=application/json
+#spring.cloud.stream.kafka.binder.zkNodes=kafka
+#spring.cloud.stream.kafka.binder.brokers=kafka
+spring.cloud.stream.function.definition=handleOrganizationChange
+spring.cloud.stream.bindings.handleOrganizationChange-out-0.destination=orgChangeTopic
+spring.cloud.stream.bindings.handleOrganizationChange-out-0.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 
