--- a/licensing-service.properties
+++ b/licensing-service.properties
@@ -30,16 +30,17 @@ signing.key: "345345fsdfsf5345"
 
 
 
-#spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
-#spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
-#spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
-#spring.cloud.stream.kafka.binder.zkNodes= kafka
-#spring.cloud.stream.kafka.binder.brokers=kafka
-spring.cloud.stream.function.bindings.inboundOrgChanges.destination= orgChangeTopic
-spring.cloud.stream.function.bindings.inboundOrgChanges.content-type= application/json
-spring.cloud.stream.function.bindings.inboundOrgChanges.group= licensingGroup
+spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
+spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
+spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
 spring.cloud.stream.kafka.binder.zkNodes= kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
+
+#spring.cloud.stream.function.bindings.inboundOrgChanges.destination= orgChangeTopic
+#spring.cloud.stream.function.bindings.inboundOrgChanges.content-type= application/json
+#spring.cloud.stream.function.bindings.inboundOrgChanges.group= licensingGroup
+#spring.cloud.stream.kafka.binder.zkNodes= kafka
+#spring.cloud.stream.kafka.binder.brokers=kafka
 
 spring.zipkin.baseUrl:http://zipkin:9411
 spring.sleuth.sampler.percentage: 1
