--- a/organization-service-dev.properties
+++ b/organization-service-dev.properties
@@ -28,12 +28,6 @@ spring.jpa.defer-datasource-initialization=true
 security.oauth2.resource.userInfoUri= http://authenticationservice:8080/user
 signing.key: "345345fsdfsf5345"
 
-
-spring.cloud.stream.bindings.output.destination=orgChangeTopic
-spring.cloud.stream.bindings.output.content-type=application/json
-spring.cloud.stream.kafka.binder.zkNodes=kafka
-spring.cloud.stream.kafka.binder.brokers=kafka
-
 spring.zipkin.baseUrl:http://zipkin:9411
 spring.sleuth.sampler.percentage: 1
 
@@ -46,12 +40,13 @@ keycloak.credentials.secret = F6vCEbZVqnqASY9q3SqYLImlzKuDDIGo
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only = true
 
-#spring.cloud.stream.bindings.output.destination=orgChangeTopic
-#spring.cloud.stream.bindings.output.content-type=application/json
-#spring.cloud.stream.kafka.binder.zkNodes=kafka
-#spring.cloud.stream.kafka.binder.brokers=kafka
-spring.cloud.stream.function.definition=handleOrganizationChange
-spring.cloud.stream.bindings.handleOrganizationChange-out-0.destination=orgChangeTopic
-spring.cloud.stream.bindings.handleOrganizationChange-out-0.content-type=application/json
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
+
+#spring.cloud.stream.function.definition=handleOrganizationChange
+#spring.cloud.stream.bindings.handleOrganizationChange-out-0.destination=orgChangeTopic
+#spring.cloud.stream.bindings.handleOrganizationChange-out-0.content-type=application/json
+#spring.cloud.stream.kafka.binder.zkNodes=kafka
+#spring.cloud.stream.kafka.binder.brokers=kafka
