--- a/gateway-server-dev.yml
+++ b/gateway-server-dev.yml
@@ -1,3 +1,46 @@
+# server:
+#   port: 8072
+ 
+# eureka:
+#   instance:
+#     preferIpAddress: true
+#   client:
+#     registerWithEureka: true
+#     fetchRegistry: true
+#     serviceUrl:
+#       defaultZone: http://eureka-server:8070/eureka/
+      
+ 
+# spring:
+#   cloud:
+#     loadbalancer.ribbon.enabled: false
+#     gateway:
+#         discovery:
+#           locator:
+#             enabled: true
+#             lowerCaseServiceId: true
+# #        routes:
+# #        - id: organization-service
+# #          uri: lb://organization-service
+# #          predicates:
+# #          - Path=/organization/**
+# #          filters:
+# #          - RewritePath=/organization/(?<path>.*), /$\{path}
+# #        - id: licensing-service
+# #          uri: lb://licensing-service
+# #          predicates:
+# #          - Path=/license/**
+# #          filters:
+# #          - RewritePath=/license/(?<path>.*), /$\{path}
+
+
+       
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: "*"
+
 server:
   port: 8072
  
@@ -10,35 +53,39 @@ eureka:
     serviceUrl:
       defaultZone: http://eureka-server:8070/eureka/
       
- 
+
+
 spring:
+  zipkin:
+    baseUrl: http://zipkin:9411
+  sleuth:
+    sampler:
+      percentage: 1
   cloud:
     loadbalancer.ribbon.enabled: false
     gateway:
-        discovery:
-          locator:
-            enabled: true
-            lowerCaseServiceId: true
-#        routes:
-#        - id: organization-service
-#          uri: lb://organization-service
-#          predicates:
-#          - Path=/organization/**
-#          filters:
-#          - RewritePath=/organization/(?<path>.*), /$\{path}
-#        - id: licensing-service
-#          uri: lb://licensing-service
-#          predicates:
-#          - Path=/license/**
-#          filters:
-#          - RewritePath=/license/(?<path>.*), /$\{path}
-
-
-       
+        routes:
+        - id: organization-service
+          uri: lb://organization-service
+          predicates:
+          - Path=/organization/**
+          filters:
+          - RewritePath=/organization/(?<path>.*), /$\{path}
+          - RemoveRequestHeader= Cookie,Set-Cookie
+        - id: licensing-service
+          uri: lb://licensing-service
+          predicates:
+          - Path=/license/**
+          filters:
+          - RewritePath=/license/(?<path>.*), /$\{path}
+          - RemoveRequestHeader= Cookie,Set-Cookie
+            
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+        
+        
         
         
