--- a/gateway-server-dev.yml
+++ b/gateway-server-dev.yml
@@ -51,7 +51,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://eureka-server:8070/eureka/
+      defaultZone: http://eurekaserver:8070/eureka/
       
 
 
