--- a/licensing-service-dev.properties
+++ b/licensing-service-dev.properties
@@ -22,7 +22,7 @@ management.endpoints.enabled-by-default=true
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
+eureka.client.serviceUrl.defaultZone = http://eurekaserver:8070/eureka/
 
 
 spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
