--- a/organization-service.properties
+++ b/organization-service.properties
@@ -18,7 +18,7 @@ management.endpoints.enabled-by-default=true
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
+eureka.client.serviceUrl.defaultZone = http://eurekaserver:8070/eureka/
 
 spring.cloud.stream.bindings.output.destination=orgChangeTopic
 spring.cloud.stream.bindings.output.content-type=application/json
