--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -24,3 +24,15 @@ eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http:/
 #keycloak.credentials.secret = WL9dmLQcjvwcbXv3Qrq0fA8GDUVZ01kt
 #keycloak.use-resource-role-mappings = true
 #keycloak.bearer-only = true
+spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
+spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
+spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
+spring.cloud.stream.kafka.binder.zkNodes= kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+
+spring.zipkin.baseUrl:http://zipkin:9411
+spring.sleuth.sampler.percentage: 1
+
+redis.server = redis
+redis.port = 6379
