--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -24,6 +24,10 @@ eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http:/
 #keycloak.credentials.secret = WL9dmLQcjvwcbXv3Qrq0fA8GDUVZ01kt
 #keycloak.use-resource-role-mappings = true
 #keycloak.bearer-only = true
+spring.cloud.loadbalancer.ribbon.enabled = false
+        
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=true
 spring.cloud.stream.bindings.inboundOrgChanges.destination= orgChangeTopic
 spring.cloud.stream.bindings.inboundOrgChanges.content-type= application/json
 spring.cloud.stream.bindings.inboundOrgChanges.group= licensingGroup
