--- a/ecom-configs/order.properties
+++ b/ecom-configs/order.properties
@@ -16,10 +16,22 @@ eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
 eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
-keycloak.realm = ecommerce-realm
-keycloak.auth-server-url = http://keycloak:8080/auth
-keycloak.ssl-required = external
-keycloak.resource = ecommerce
-keycloak.credentials.secret = WL9dmLQcjvwcbXv3Qrq0fA8GDUVZ01kt
-keycloak.use-resource-role-mappings = true
-keycloak.bearer-only = true
+#keycloak.realm = ecommerce-realm
+#keycloak.auth-server-url = http://keycloak:8080/auth
+#keycloak.ssl-required = external
+#keycloak.resource = ecommerce
+#keycloak.credentials.secret = hr7uR5bLgy5zp8D2y6brRgeMkPwi9oON
+#keycloak.use-resource-role-mappings = true
+#keycloak.bearer-only = true
+
+spring.cloud.loadbalancer.ribbon.enabled = false
+        
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=true
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
+spring.cloud.stream.kafka.binder.zkNodes=kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
+
+spring.zipkin.baseUrl:http://zipkin:9411
+spring.sleuth.sampler.percentage: 1
