--- a/ecom-configs/order-dev.properties
+++ b/ecom-configs/order-dev.properties
@@ -35,3 +35,5 @@ spring.cloud.stream.kafka.binder.brokers=kafka
 
 spring.zipkin.baseUrl:http://zipkin:9411
 spring.sleuth.sampler.percentage: 1
+redis.server = redis
+redis.port = 6379
