--- a/ecom-configs/order.properties
+++ b/ecom-configs/order.properties
@@ -1,3 +1,4 @@
+example.property= I AM THE DEFAULT
 spring.datasource.url=jdbc:postgresql://database-order:5432/order-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
