--- a/ecom-configs/catalog.properties
+++ b/ecom-configs/catalog.properties
@@ -1,3 +1,4 @@
+example.property= I AM THE DEFAULT
 spring.datasource.url=jdbc:postgresql://database-catalog:5432/catalog-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
