--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -1,3 +1,4 @@
+example.property= I AM THE DEFAULT
 catalog.service.url=http://catalog:8086
 spring.datasource.url=jdbc:postgresql://database-cart-item:5432/cart-item-db
 spring.datasource.username=postgres
