--- a/ecom-configs/cart-item-dev.properties
+++ b/ecom-configs/cart-item-dev.properties
@@ -1,3 +1,4 @@
+example.property= I AM THE DEV
 catalog.service.url=http://localhost:8086
 spring.datasource.url=jdbc:postgresql://database-cart-item:5432/cart-item-db
 spring.datasource.username=postgres
