--- a/ecom-configs/cart-item.properties
+++ b/ecom-configs/cart-item.properties
@@ -17,7 +17,8 @@ spring.cloud.config.import-check.enabled=false
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
+eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/
+#eureka.client.serviceUrl.defaultZone = http://eureka-server:8070/eureka/, http://eureka-server-instance-2:8072/eureka
 #keycloak.realm = ecommerce-realm
 #keycloak.auth-server-url = http://keycloak:8080/auth
 #keycloak.ssl-required = external
