--- a/licensing-service.properties
+++ b/licensing-service.properties
@@ -19,6 +19,9 @@ spring.cloud.loadbalancer.ribbon.enabled = false
         
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.cors.allowed-origins=true
+management.endpoint.health.show-details=always
 
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
