--- a/ecom-configs/order-dev.properties
+++ b/ecom-configs/order-dev.properties
@@ -1,7 +1,5 @@
-example.property= I AM THE DEV
-#spring.datasource.url=jdbc:postgresql://database-order:5432/order-db
-spring.datasource.url=jdbc:postgresql://database-order.cr9bywetmpv9.us-east-2.rds.amazonaws.com/order-db
-
+example.property= I AM THE DEFAULT
+spring.datasource.url=jdbc:postgresql://database-order:5432/order-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql = true
@@ -42,13 +40,8 @@ spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 
-#spring.zipkin.baseUrl:http://zipkin:9411
-spring.zipkin.baseUrl: http://3.144.17.1:9411/zipkin/
+spring.zipkin.baseUrl:http://zipkin:9411
 spring.sleuth.sampler.percentage: 1
-#redis.server = redis
-redis.server = redis-001.xq06os.0001.use2.cache.amazonaws.com:6379
+redis.server = redis
 redis.port = 6379
-
-logstash.host= http://3.144.17.1:5000
-logging.config=classpath:logback-delayed.xml
 
